# HOSPAI

HospAI/: .gitignore  ADMIN_IMPLEMENTATION.md  AI_TRIAGE_README.md  CHAT_INTEGRATION_README.md  CHAT_SYSTEM_README.md  CMakeLists.txt  CMakeLists_demo.txt  HospAI.pro  IMPLEMENTATION_SUMMARY.md  PATIENT_STAFF_RICH_CHAT_IMPROVEMENTS.md  PATIENT_TO_STAFF_SERVICE_IMPROVEMENTS.md  README.md  RICH_TEXT_CHAT_FIXES.md  RICH_TEXT_USAGE_EXAMPLES.md  SETTINGS_FEATURES.md  SETTINGS_FIXES.md  SETTINGS_UI_IMPLEMENTATION.md  STYLE_OPTIMIZATION_README.md  USAGE_GUIDE.md  chat_demo.cpp  chat_demo_CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  start_chat_demo.sh  style_demo.cpp  test_ai_api.sh  test_chat_system.sh  test_richtext_parse.cpp  test_status_fix.sh
HospAI/html/: admin-audit.html  admin-system-config.html  admin-user-manage.html  login.html  patient-ai-triage.html  patient-appointment.html  patient-chat-service.html  patient-faq.html  register.html  staff-chat.html  staff-consultation-manage.html  staff-stats.html  staff-system-stats.html
HospAI/src/core/: AIApiClient.cpp  AIApiClient.h  ChatStorage.cpp  ChatStorage.h  DatabaseManager.cpp  DatabaseManager.h  RichMessageTypes.h  UserRole.h
HospAI/src/views/admin/: AdminMainWidget.cpp  AdminMainWidget.h  AdminWindow.cpp  AdminWindow.h  AuditLogWidget.cpp  AuditLogWidget.h  PatientManageWidget.cpp  PatientManageWidget.h  QuickReplyManageWidget.cpp  QuickReplyManageWidget.h  StaffRatingWidget.cpp  StaffRatingWidget.h  SystemConfigWidget.cpp  SystemConfigWidget.h  SystemStatsWidget.cpp  SystemStatsWidget.h  UserManageWidget.cpp  UserManageWidget.h
HospAI/src/views/common/: BaseWindow.cpp  BaseWindow.h  ExampleUsageWidget.cpp  ExampleUsageWidget.h  ForgotPasswordDialog.cpp  ForgotPasswordDialog.h  ForgotPasswordDialog.ui  HospitalNavigationWidget.cpp  HospitalNavigationWidget.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  RegisterDialog.cpp  RegisterDialog.h  RoleSelector.cpp  RoleSelector.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SideMenuWidget.cpp  SideMenuWidget.h  TitleBarWidget.cpp  TitleBarWidget.h  UIStyleManager.cpp  UIStyleManager.h
HospAI/src/views/patient/: AppointmentWidget.cpp  AppointmentWidget.h  ChatWidget.cpp  ChatWidget.h  FAQWidget.cpp  FAQWidget.h  MapWidget.cpp  MapWidget.h  PatientMainWidget.cpp  PatientMainWidget.h  PatientWindow.cpp  PatientWindow.h  RealChatWidget.cpp  RealChatWidget.h  SessionRatingDialog.cpp  SessionRatingDialog.h
HospAI/src/views/staff/: ConsultationWidget.cpp  ConsultationWidget.h  KnowledgeBaseWidget.cpp  KnowledgeBaseWidget.h  ManualChatWidget.cpp  ManualChatWidget.h  RecordWidget.cpp  RecordWidget.h  StaffChatManager.cpp  StaffChatManager.h  StaffMainWidget.cpp  StaffMainWidget.h  StaffWindow.cpp  StaffWindow.h  StatsWidget.cpp  StatsWidget.h
